--- a/web/package.json
+++ b/web/package.json
@@ -15,7 +15,8 @@
   "dependencies": {
     "muse-ui": "^2.0.2",
     "vue": "^2.2.6",
-    "vue-router": "^2.3.1"
+    "vue-router": "^2.3.1",
+    "vuex": "^2.3.1"
   },
   "devDependencies": {
     "autoprefixer": "^6.7.2",
