--- a/node-server/package.json
+++ b/node-server/package.json
@@ -7,6 +7,7 @@
   "dependencies": {
     "koa": "^2.2.0",
     "koa-bodyparser": "3",
+    "koa-logger": "^2.0.1",
     "koa-router": "^7.1.1"
   }
 }
