--- a/node-server/package.json
+++ b/node-server/package.json
@@ -4,10 +4,15 @@
   "main": "index.js",
   "author": "Brandon Chen",
   "license": "MIT",
+  "scripts": {
+    "start": "cd ../web && yarn run build && cd ../node-server && node src"
+  },
   "dependencies": {
     "koa": "^2.2.0",
     "koa-bodyparser": "3",
     "koa-logger": "^2.0.1",
-    "koa-router": "^7.1.1"
+    "koa-router": "^7.1.1",
+    "koa-socket": "^4.4.0",
+    "koa-static": "^3.0.0"
   }
 }
